--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sorter_backend"
 version = "0.1.0"
-authors = ["nick"]
+authors = ["Shootertrex"]
 edition = "2018"
 
 [dependencies]
